--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,9 +1,8 @@
 <div class="container text-center position-absolute top-50 start-50 translate-middle">
     <div class="row align-items-center">
         <div class="col">
-            <h3 style="background-color: var(--brown); color: var(--white); width: 100%; padding:3px;">Login </h3>
-            <form style="border: solid 4px var(--brown);" id="login-form">
-
+            <h3 style="background-color: var(--brown); color: var(--white); width: 100%; padding:3px;">signup</h3>
+            <form style="border: solid 4px var(--brown);" id="signup-form">
 
                 <div class="mb-3">
                     <label for="exampleInputEmail1" class="form-label">Username</label>
@@ -12,14 +11,16 @@
                 </div>
                 <div class="mb-3">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="login-password">
+                    <input type="password" class="form-control" id="signup-password">
                 </div>
 
                 <button type="submit" class="btn"
-                    style="background-color: var(--grey); margin-bottom:4px; width: 100%">submit</button>
-                <p><a class="link-opacity-100" href="/signup">Sign Up instead</a></p>
+                    style="background-color: var(--grey); margin-bottom:4px; width: 100%">Submit</button>
+                <p><a class=" link-opacity-100" href="/login">Log In instead</a></p>
             </form>
         </div>
     </div>
 </div>
-<script src="/js/login.js"></script>
+
+
+<script src="/js/signup.js"></script>
