--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,84 +1,21 @@
-header {
-    text-align: center;
-    background: rgb(109, 14, 14);
-    opacity:.7;
-    font-size: 30px;    
-    margin-bottom:50px;
-    margin-right: 40px;
-    margin-left: 40px;
+:root {
+    --brown: #2e1d1d;
+    --mint: #c9f5d9;
+    --white: white;
+    --grey: #ccc;
 }
 
-body {
-    position: relative;
-    background-color: black;
-    font-size: 20px;
-    color: white;
-    margin-right: 20px;
+nav {
     margin-left: 20px;
-    background-image: url(https://i.pinimg.com/originals/1e/80/a3/1e80a3c3d3f6507d38563c09307e8f54.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-   
-  }
-
-.post-cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
-.post-card {
-    text-align: center;
-    border: 1rem solid rgb(109, 14, 14);
-    width: 40%;
-    margin: 10px;
-    background-color: black;
-}
-
-#create-button {
-    width:200px;
-    height: 50px;
-    background-color:rgb(109, 14, 14) ;
-    margin-bottom: 50px;
-    color: white;
-}
-
-.deleteButton {
-    width:200px;
-    height: 50px;
-    background-color: rgb(109, 14, 14);
-    color: white;
-
-}
-
-h1 {
-    font-size: 80px;
-    margin-bottom: 20px;
-    font-family: 'Nosifer', cursive;;
-}
-
-h3 {
-    margin-bottom: 50px;
-}
-
-#logout {
-    width:200px;
-    height: 50px;
-    background-color: black;
-    color: white;
-}
-
-#comment {
-    font-size: 30px;
-    color: white;
-}
-
-h2 {
-    font-size: 50px;
-    color: white;
-}
-
-#home {
-    color: white;
-    margin-right: 25px;
+h1.home {
+    background-color: var(--mint);
+    color: var(--brown);
+    border-radius: 8px;
+    filter: drop-shadow(10px 5px 4px var(--grey));
+    padding: 10px;
+    margin-left: 30px;
+    width: fit-content;
+    font-weight: bold;
 }
