--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,41 +1,59 @@
+<!DOCTYPE html>
 <html lang="en">
 
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" />
-    <title>Creed Thoughts</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css" />
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
+        <link href="/css/style.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+        <title>Creed Thoughts</title>
+    </head>
 
-  </head>
+    <body style="background-color: var(--mint);">
+        <header style="height:150px; background-color:#2e1d1d;">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="/" style="color: white;">Creed Thoughts</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon" style="color: white;"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav" style="color: white;">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="/" style="color: white;">Home</a>
+                            </li>
 
-  <body class="bg-gray-200">
-    <header>
-      <h1>Creed Thoughts</h1>
-      <h3>www.creedthoughts.gov.wwwcreedthoughts</h3>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/profile" style="color: white;">Dashboard</a>
+                            </li>
+                            {{#if logged_in}}
+                                <li class="nav-item">
 
-      <nav>
-        <ul class="">
-          <a id="home" href="/">Home</a>
-          {{#if logged_in}}
-            <button id="logout">Logout</button>
-            <script src="/js/logout.js"></script>
-          {{else}}
-            <a href="/login">Login</a>
-          {{/if}}
-        </ul>
-      </nav>
-    </header>
-    <main>
+                                    <a class="nav-link" href="/logout" style="color: white;">Logout</a>
+                            {{else}}
 
-      {{{body}}}
+                                <a class="nav-link" href="/login" style="color: white;">Login</a>
 
-    </main>
+                                </li>
+                            {{/if}}
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+            <h1 class="home">Creed Thoughts</h1>
+        </header>
+        <main>
+            {{{body}}}
+        </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+        <script src="/js/logout.js"></script>
+        <script src="/js/login.js"></script>
+    </body>
 
 </html>
