--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,14 +1,17 @@
-{{log username}}
 {{#each posts as |post|}}
-    {{log username}}
-
     <div class="container">
-        <h2>{{username}}</h2>
+        <h2>{{post.user.username}}</h2>
         <h3>{{post.title}}</h3>
         <p>
 
             {{post.body}}
         </p>
+
+        <h4>Comments</h4>
+        {{#each comments as |comment|}}
+            <p><b>{{comment.user.username}}</b></p>
+            <p>{{comment.body}}</p>
+        {{/each}}
     </div>
 {{/each}}
 
